# chai

./: AGENTS.md  docker-compose.yml  pkgx.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: fetch_spdx_licenses.py  run_migrations.sh
alembic/versions/: 20250821_2148-add_text_field_to_licenses_table.py
core/: db.py  diff.py
core/models/: __init__.py
package_managers/crates/: Dockerfile  diff.py  normalizer.py
package_managers/debian/: Dockerfile  diff.py  main.py  normalizer.py
package_managers/homebrew/: Dockerfile  diff.py  normalizer.py
package_managers/pkgx/: Dockerfile  diff.py  loader.py  normalizer.py
ranker/: main.py
scripts/chai-legacy-loader/: batch_insert_package_urls.py
tests/core/: conftest.py  test_diff.py
tests/package_managers/crates/: test_crates_normalizer.py
tests/package_managers/debian/: test_debian_normalizer.py
tests/package_managers/homebrew/: test_homebrew_normalizer.py
tests/package_managers/pkgx/: test_pkgx_normalizer.py
tests/ranker/: test_dedupe.py  test_rx_graph.py
