[project]
name = "chai"
version = "1.0.0"
description = "An open-source data pipeline for all package managers"
authors = [
    { name = "Sanchit Ram Arvind", email = "sanchitram@gmail.com" },
    { name = "Jacob Heider", email = "jhheider@pkgx.dev" },
]
keywords = ["data", "pipeline"]
readme = "README.md"
requires-python = ">= 3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/teaxyz/chai"
Repository = "https://github.com/teaxyz/chai"
Source = "https://github.com/teaxyz/chai"

[tool.uv]
managed = true

[tool.pytest.ini_options]
pythonpath = ["."]
minversion = "9.0"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_"]
addopts = ["-ra", "-q", "--strict-markers", "--disable-warnings", "--tb=short", "--cov", "--cov-report=term-missing"]
markers = ["unit"]

[tool.ruff]
line-length = 88
exclude = ["__pycache__", ".venv", ".git", ".pytest_cache"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (error)
    "F",   # pyflakes
    "B",   # bugbear
    "B9",
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "I",   # isort
    "UP",  # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF",
]
ignore = [
    # leave it to the formatter to split long lines and
    # the judgement of all of us.
    "E501",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "testing-postgresql>=1.3.0",
]
indexers = [
    "alembic==1.13.2",
    "certifi>=2025.4.26",
    "charset-normalizer>=3.4.2",
    "gitpython>=3.1.44",
    "idna>=3.10",
    "permalint>=0.1.15",
    "psycopg2-binary==2.9.10",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.41",
    "urllib3>=2.4.0",
]
ranker = ["numpy>=2.3.0", "rustworkx>=0.16.0"]

[tool.setuptools]
packages = [
    "core",
    "package_managers",
    "ranker"
]